@@ -44,9 +44,9 @@ extern int MT_GetThreadID();
   #define MT_SafeDec(x) (InterlockedDecrement((long*)x) == 0)
  #endif
 #else
- #define MT_SafeInc(x) (++x)
- #define MT_SafeAdd(x, y) (x += y)
- #define MT_SafeDec(x) (--x) == 0)
+ #define MT_SafeInc(x) (++*x)
+ #define MT_SafeAdd(x, y) (*x += y)
+ #define MT_SafeDec(x) (--*x) == 0)
 #endif
 
 extern void MT_Exclusive();
